8199472: Fix non-PCH build after JDK-8199319

Reviewed-by: stefank, coleenp